src/main/java/com/example/demo/Error/VolunteerNotFoundException.java
package com.example.demo.Error;

public class VolunteerNotFoundException extends RuntimeException{

    public VolunteerNotFoundException(String message) {

        super(message);
    }
}
